Adding unit tests for Topic service, refactorings