@@ -1,5 +1,6 @@
 package io.aiven.klaw.service;
 
+import static io.aiven.klaw.model.enums.ApiResultStatus.NOT_AUTHORIZED;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyBoolean;
@@ -10,27 +11,24 @@ import static org.mockito.Mockito.when;
 import io.aiven.klaw.UtilMethods;
 import io.aiven.klaw.config.ManageDatabase;
 import io.aiven.klaw.dao.Env;
-import io.aiven.klaw.dao.KwClusters;
-import io.aiven.klaw.dao.Team;
 import io.aiven.klaw.dao.Topic;
 import io.aiven.klaw.dao.TopicRequest;
 import io.aiven.klaw.dao.UserInfo;
 import io.aiven.klaw.error.KlawException;
 import io.aiven.klaw.helpers.db.rdbms.HandleDbRequestsJdbc;
 import io.aiven.klaw.model.ApiResponse;
-import io.aiven.klaw.model.ApiResultStatus;
-import io.aiven.klaw.model.KafkaClustersType;
-import io.aiven.klaw.model.KafkaSupportedProtocol;
 import io.aiven.klaw.model.KwTenantConfigModel;
-import io.aiven.klaw.model.RequestOperationType;
-import io.aiven.klaw.model.SyncTopicUpdates;
 import io.aiven.klaw.model.TopicInfo;
 import io.aiven.klaw.model.TopicRequestModel;
-import io.aiven.klaw.model.TopicRequestTypes;
+import io.aiven.klaw.model.enums.AclPatternType;
+import io.aiven.klaw.model.enums.ApiResultStatus;
+import io.aiven.klaw.model.enums.RequestOperationType;
+import io.aiven.klaw.model.enums.TopicRequestTypes;
 import java.sql.Timestamp;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.HashMap;
+import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import org.junit.jupiter.api.BeforeEach;
@@ -60,10 +58,6 @@ public class TopicControllerServiceTest {
 
   @Mock private UserInfo userInfo;
 
-  @Mock private Map<Integer, KwClusters> clustersHashMap;
-
-  @Mock private KwClusters kwClusters;
-
   @Mock private ManageDatabase manageDatabase;
 
   @Mock private HandleDbRequestsJdbc handleDbRequests;
@@ -73,8 +67,6 @@ public class TopicControllerServiceTest {
   @Mock private MailUtils mailService;
 
   private TopicControllerService topicControllerService;
-
-  private TopicSyncControllerService topicSyncControllerService;
 
   @Mock RolesPermissionsControllerService rolesPermissionsControllerService;
 
@@ -89,7 +81,6 @@ public class TopicControllerServiceTest {
   @BeforeEach
   public void setUp() throws Exception {
     this.topicControllerService = new TopicControllerService(clusterApiService, mailService);
-    this.topicSyncControllerService = new TopicSyncControllerService();
     utilMethods = new UtilMethods();
     this.env = new Env();
     env.setId("1");
@@ -99,17 +90,6 @@ public class TopicControllerServiceTest {
     ReflectionTestUtils.setField(topicControllerService, "commonUtilsService", commonUtilsService);
     ReflectionTestUtils.setField(
         topicControllerService,
-        "rolesPermissionsControllerService",
-        rolesPermissionsControllerService);
-
-    ReflectionTestUtils.setField(topicSyncControllerService, "manageDatabase", manageDatabase);
-    ReflectionTestUtils.setField(topicSyncControllerService, "mailService", mailService);
-    ReflectionTestUtils.setField(
-        topicSyncControllerService, "commonUtilsService", commonUtilsService);
-    ReflectionTestUtils.setField(
-        topicSyncControllerService, "clusterApiService", clusterApiService);
-    ReflectionTestUtils.setField(
-        topicSyncControllerService,
         "rolesPermissionsControllerService",
         rolesPermissionsControllerService);
 
@@ -143,7 +123,6 @@ public class TopicControllerServiceTest {
     when(mailService.getEnvProperty(anyInt(), anyString())).thenReturn("1");
 
     ApiResponse apiResponse = topicControllerService.createTopicsRequest(getCorrectTopic());
-
     assertThat(apiResponse.getResult()).isEqualTo(ApiResultStatus.SUCCESS.value);
   }
 
@@ -165,7 +144,6 @@ public class TopicControllerServiceTest {
     when(mailService.getEnvProperty(anyInt(), anyString())).thenReturn("1");
 
     ApiResponse apiResponse = topicControllerService.createTopicsRequest(getFailureTopic());
-
     assertThat(apiResponse.getResult()).isEqualTo(ApiResultStatus.SUCCESS.value);
   }
 
@@ -188,7 +166,6 @@ public class TopicControllerServiceTest {
     when(mailService.getEnvProperty(anyInt(), anyString())).thenReturn("1");
 
     ApiResponse apiResponse = topicControllerService.createTopicsRequest(getFailureTopic1());
-
     assertThat(apiResponse.getResult()).contains("failure");
   }
 
@@ -204,65 +181,275 @@ public class TopicControllerServiceTest {
     when(manageDatabase.getKafkaEnvList(anyInt())).thenReturn(utilMethods.getEnvListsIncorrect1());
     when(manageDatabase.getTeamsAndAllowedEnvs(anyInt(), anyInt()))
         .thenReturn(Collections.singletonList("1"));
-
     when(mailService.getEnvProperty(anyInt(), anyString())).thenReturn("1");
 
     ApiResponse apiResponse = topicControllerService.createTopicsRequest(getFailureTopic1());
-
     assertThat(apiResponse.getResult()).isEqualTo(null);
   }
 
   @Test
-  @Order(7)
-  public void updateSyncTopicsSuccess() throws KlawException {
-    stubUserInfo();
-    when(manageDatabase.getTenantConfig()).thenReturn(tenantConfig);
-    when(tenantConfig.get(anyInt())).thenReturn(tenantConfigModel);
-    when(tenantConfigModel.getBaseSyncEnvironment()).thenReturn("1");
+  @Order(5)
+  public void createTopicDeleteRequestFailure1() {
+    String topicName = "testtopic1";
+    String envId = "1";
+    when(commonUtilsService.isNotAuthorizedUser(any(), any())).thenReturn(true);
+
+    try {
+      ApiResponse apiResponse = topicControllerService.createTopicDeleteRequest(topicName, envId);
+      assertThat(apiResponse.getResult()).isEqualTo(NOT_AUTHORIZED.value);
+    } catch (KlawException e) {
+      throw new RuntimeException(e);
+    }
+  }
+
+  @Test
+  @Order(6)
+  public void createTopicDeleteRequestFailure2() {
+    String topicName = "testtopic1";
+    String envId = "1";
     when(commonUtilsService.isNotAuthorizedUser(any(), any())).thenReturn(false);
-    when(manageDatabase.getTeamsAndAllowedEnvs(anyInt(), anyInt()))
-        .thenReturn(Collections.singletonList("1"));
-    when(handleDbRequests.addToSynctopics(any())).thenReturn(ApiResultStatus.SUCCESS.value);
+    when(commonUtilsService.getTenantId(anyString())).thenReturn(101);
+    when(handleDbRequests.selectTopicRequests(anyString(), anyString(), anyString(), anyInt()))
+        .thenReturn(getListTopicRequests());
+    try {
+      ApiResponse apiResponse = topicControllerService.createTopicDeleteRequest(topicName, envId);
+      assertThat(apiResponse.getResult())
+          .isEqualTo("Failure. A delete topic request already exists.");
+    } catch (KlawException e) {
+      throw new RuntimeException(e);
+    }
+  }
 
-    ApiResponse result =
-        topicSyncControllerService.updateSyncTopics(utilMethods.getSyncTopicUpdates());
-
-    assertThat(result.getResult()).isEqualTo(ApiResultStatus.SUCCESS.value);
+  @Test
+  @Order(7)
+  public void createTopicDeleteRequestFailure3() {
+    String topicName = "testtopic1";
+    String envId = "1";
+    stubUserInfo();
+    when(commonUtilsService.isNotAuthorizedUser(any(), any())).thenReturn(false);
+    when(commonUtilsService.getTenantId(anyString())).thenReturn(101);
+    when(handleDbRequests.selectTopicRequests(anyString(), anyString(), anyString(), anyInt()))
+        .thenReturn(Collections.emptyList());
+    when(handleDbRequests.getTopicTeam(anyString(), anyInt()))
+        .thenReturn(List.of(getTopic(topicName)));
+    when(commonUtilsService.getFilteredTopicsForTenant(any()))
+        .thenReturn(List.of(getTopic(topicName)));
+    try {
+      ApiResponse apiResponse = topicControllerService.createTopicDeleteRequest(topicName, envId);
+      assertThat(apiResponse.getResult())
+          .isEqualTo("Failure. You cannot delete this topic, as you are not part of this team.");
+    } catch (KlawException e) {
+      throw new RuntimeException(e);
+    }
   }
 
   @Test
   @Order(8)
-  public void updateSyncTopicsNoUpdate() throws KlawException {
-    List<SyncTopicUpdates> topicUpdates = new ArrayList<>();
-
+  public void createTopicDeleteRequestFailure4() {
+    String topicName = "testtopic1";
+    String envId = "1";
     stubUserInfo();
-    when(manageDatabase.getTenantConfig()).thenReturn(tenantConfig);
-    when(tenantConfig.get(anyInt())).thenReturn(tenantConfigModel);
-    when(tenantConfigModel.getBaseSyncEnvironment()).thenReturn("1");
+    when(commonUtilsService.getTeamId(anyString())).thenReturn(1);
     when(commonUtilsService.isNotAuthorizedUser(any(), any())).thenReturn(false);
-    when(manageDatabase.getTeamsAndAllowedEnvs(anyInt(), anyInt()))
-        .thenReturn(Collections.singletonList("1"));
-
-    ApiResponse result = topicSyncControllerService.updateSyncTopics(topicUpdates);
-
-    assertThat(result.getResult()).isEqualTo("No record updated.");
+    when(commonUtilsService.getTenantId(anyString())).thenReturn(101);
+    when(handleDbRequests.selectTopicRequests(anyString(), anyString(), anyString(), anyInt()))
+        .thenReturn(Collections.emptyList());
+    when(handleDbRequests.getTopicTeam(anyString(), anyInt()))
+        .thenReturn(List.of(getTopic(topicName)));
+    when(commonUtilsService.getFilteredTopicsForTenant(any()))
+        .thenReturn(List.of(getTopic(topicName)));
+    when(handleDbRequests.getSyncAcls(anyString(), anyString(), anyInt()))
+        .thenReturn(utilMethods.getAcls());
+    try {
+      ApiResponse apiResponse = topicControllerService.createTopicDeleteRequest(topicName, envId);
+      assertThat(apiResponse.getResult())
+          .isEqualTo(
+              "Failure. There are existing subscriptions for topic. Please get them deleted before.");
+    } catch (KlawException e) {
+      throw new RuntimeException(e);
+    }
   }
 
   @Test
   @Order(9)
-  public void updateSyncTopicsNotAuthorized() throws KlawException {
+  public void createTopicDeleteRequestFailure5() {
+    String topicName = "testtopic1";
+    String envId = "2";
     stubUserInfo();
-    when(manageDatabase.getTenantConfig()).thenReturn(tenantConfig);
-    when(tenantConfig.get(anyInt())).thenReturn(tenantConfigModel);
-    when(tenantConfigModel.getBaseSyncEnvironment()).thenReturn("1");
-    ApiResponse result =
-        topicSyncControllerService.updateSyncTopics(utilMethods.getSyncTopicUpdates());
-
-    assertThat(result.getResult()).isEqualTo(ApiResultStatus.NOT_AUTHORIZED.value);
+    when(userInfo.getTeamId()).thenReturn(1);
+    when(commonUtilsService.isNotAuthorizedUser(any(), any())).thenReturn(false);
+    when(commonUtilsService.getTenantId(anyString())).thenReturn(101);
+    when(handleDbRequests.selectTopicRequests(anyString(), anyString(), anyString(), anyInt()))
+        .thenReturn(Collections.emptyList());
+    when(handleDbRequests.getTopicTeam(anyString(), anyInt()))
+        .thenReturn(List.of(getTopic(topicName)));
+    when(manageDatabase.getTeamsAndAllowedEnvs(anyInt(), anyInt()))
+        .thenReturn(Collections.singletonList("1"));
+    try {
+      ApiResponse apiResponse = topicControllerService.createTopicDeleteRequest(topicName, envId);
+      assertThat(apiResponse.getResult())
+          .isEqualTo("Failure. Topic not found on cluster: " + topicName);
+    } catch (KlawException e) {
+      throw new RuntimeException(e);
+    }
   }
 
   @Test
   @Order(10)
+  public void createTopicDeleteRequestSuccess() {
+    String topicName = "testtopic1";
+    String envId = "1";
+    stubUserInfo();
+    when(commonUtilsService.getTeamId(anyString())).thenReturn(1);
+    when(commonUtilsService.isNotAuthorizedUser(any(), any())).thenReturn(false);
+    when(commonUtilsService.getTenantId(anyString())).thenReturn(101);
+    when(handleDbRequests.selectTopicRequests(anyString(), anyString(), anyString(), anyInt()))
+        .thenReturn(Collections.emptyList());
+    when(handleDbRequests.getTopicTeam(anyString(), anyInt()))
+        .thenReturn(List.of(getTopic(topicName)));
+    when(commonUtilsService.getFilteredTopicsForTenant(any()))
+        .thenReturn(List.of(getTopic(topicName)));
+    when(handleDbRequests.getSyncAcls(anyString(), anyString(), anyInt()))
+        .thenReturn(Collections.emptyList());
+    Map<String, String> deleteReqResult = new HashMap<>();
+    deleteReqResult.put("result", ApiResultStatus.SUCCESS.value);
+    when(handleDbRequests.requestForTopic(any())).thenReturn(deleteReqResult);
+    try {
+      ApiResponse apiResponse = topicControllerService.createTopicDeleteRequest(topicName, envId);
+      assertThat(apiResponse.getResult()).isEqualTo(ApiResultStatus.SUCCESS.value);
+    } catch (KlawException e) {
+      throw new RuntimeException(e);
+    }
+  }
+
+  @Test
+  @Order(11)
+  public void createClaimTopicRequestFailure1() {
+    String topicName = "testtopic1";
+    String envId = "1";
+    stubUserInfo();
+    when(commonUtilsService.getTenantId(anyString())).thenReturn(101);
+    when(handleDbRequests.selectTopicRequests(anyString(), anyString(), anyString(), anyInt()))
+        .thenReturn(getListTopicRequests());
+    try {
+      ApiResponse apiResponse = topicControllerService.createClaimTopicRequest(topicName, envId);
+      assertThat(apiResponse.getResult())
+          .isEqualTo("Failure. A request already exists for this topic.");
+    } catch (KlawException e) {
+      throw new RuntimeException(e);
+    }
+  }
+
+  @Test
+  @Order(12)
+  public void createClaimTopicRequestSuccess() {
+    String topicName = "testtopic1";
+    String envId = "1";
+    stubUserInfo();
+    when(commonUtilsService.getTenantId(anyString())).thenReturn(101);
+    when(handleDbRequests.selectTopicRequests(anyString(), anyString(), anyString(), anyInt()))
+        .thenReturn(Collections.emptyList());
+    when(handleDbRequests.getTopicTeam(anyString(), anyInt()))
+        .thenReturn(List.of(getTopic(topicName)));
+    when(commonUtilsService.getFilteredTopicsForTenant(any()))
+        .thenReturn(List.of(getTopic(topicName)));
+    List<UserInfo> userList = utilMethods.getUserInfoList("testuser", "");
+    userList.get(0).setTeamId(1);
+    when(handleDbRequests.selectAllUsersInfo(anyInt())).thenReturn(userList);
+    Map<String, String> claimReqResult = new HashMap<>();
+    claimReqResult.put("result", ApiResultStatus.SUCCESS.value);
+    when(handleDbRequests.requestForTopic(any())).thenReturn(claimReqResult);
+    try {
+      ApiResponse apiResponse = topicControllerService.createClaimTopicRequest(topicName, envId);
+      assertThat(apiResponse.getResult()).isEqualTo(ApiResultStatus.SUCCESS.value);
+    } catch (KlawException e) {
+      throw new RuntimeException(e);
+    }
+  }
+
+  @Test
+  @Order(22)
+  public void getTopicRequests() {
+    stubUserInfo();
+    when(manageDatabase.getKafkaEnvList(anyInt())).thenReturn(utilMethods.getEnvLists());
+    when(commonUtilsService.getEnvsFromUserId(anyString()))
+        .thenReturn(new HashSet<>(Collections.singletonList("1")));
+    when(handleDbRequests.getAllTopicRequests(anyString(), anyInt()))
+        .thenReturn(getListTopicRequests());
+    when(commonUtilsService.deriveCurrentPage(anyString(), anyString(), anyInt())).thenReturn("1");
+    when(manageDatabase.getTeamNameFromTeamId(anyInt(), anyInt())).thenReturn("INFRATEAM");
+
+    List<TopicRequestModel> listTopicRqs = topicControllerService.getTopicRequests("1", "", "all");
+    assertThat(listTopicRqs).hasSize(2);
+  }
+
+  @Test
+  @Order(13)
+  public void getTopicTeamOnlyFailure() {
+    String topicName = "testtopic";
+    stubUserInfo();
+    when(commonUtilsService.getTenantId(anyString())).thenReturn(101);
+    Map<String, String> topicTeamMap =
+        topicControllerService.getTopicTeamOnly(topicName, AclPatternType.PREFIXED);
+    assertThat(topicTeamMap.get("error")).contains("There are no topics found with this prefix.");
+  }
+
+  @Test
+  @Order(13)
+  public void getTopicTeamOnlyFailure2() {
+    String topicName = "testtopic";
+    String teamName = "TestTeam";
+    List<Topic> topicList = utilMethods.getTopics();
+    Topic topic = new Topic();
+    topic.setTopicname("testtopic2");
+    topic.setEnvironment("1");
+    topicList.add(topic);
+
+    stubUserInfo();
+    when(commonUtilsService.getTenantId(anyString())).thenReturn(101);
+    when(handleDbRequests.getAllTopics(anyInt())).thenReturn(topicList);
+    when(commonUtilsService.getEnvsFromUserId(anyString()))
+        .thenReturn(new HashSet<>(Collections.singletonList("1")));
+    Map<String, String> topicTeamMap =
+        topicControllerService.getTopicTeamOnly(topicName, AclPatternType.PREFIXED);
+    assertThat(topicTeamMap.get("error"))
+        .contains("There are atleast two topics with same prefix owned by different teams.");
+  }
+
+  @Test
+  @Order(13)
+  public void getTopicTeamOnlySuccess() {
+    String topicName = "testtopic";
+    String teamName = "TestTeam";
+    stubUserInfo();
+    when(commonUtilsService.getTenantId(anyString())).thenReturn(101);
+    when(handleDbRequests.getAllTopics(anyInt())).thenReturn(utilMethods.getTopics());
+    when(commonUtilsService.getEnvsFromUserId(anyString()))
+        .thenReturn(new HashSet<>(Collections.singletonList("1")));
+    when(manageDatabase.getTeamNameFromTeamId(anyInt(), anyInt())).thenReturn(teamName);
+    Map<String, String> topicTeamMap =
+        topicControllerService.getTopicTeamOnly(topicName, AclPatternType.PREFIXED);
+    assertThat(topicTeamMap.get("team")).isEqualTo(teamName);
+  }
+
+  @Test
+  @Order(13)
+  public void getTopicTeamOnlySuccess2() {
+    String topicName = "testtopic";
+    String teamName = "TestTeam";
+    stubUserInfo();
+    List<Topic> topicList = utilMethods.getTopics();
+    when(commonUtilsService.getTenantId(anyString())).thenReturn(101);
+    when(handleDbRequests.getTopicTeam(anyString(), anyInt())).thenReturn(topicList);
+    when(commonUtilsService.getFilteredTopicsForTenant(any())).thenReturn(topicList);
+    when(manageDatabase.getTeamNameFromTeamId(anyInt(), anyInt())).thenReturn(teamName);
+    Map<String, String> topicTeamMap =
+        topicControllerService.getTopicTeamOnly(topicName, AclPatternType.LITERAL);
+    assertThat(topicTeamMap.get("team")).isEqualTo(teamName);
+  }
+
+  @Test
+  @Order(13)
   public void getCreatedTopicRequests1() {
     List<TopicRequest> listTopicReqs = new ArrayList<>();
     listTopicReqs.add(getCorrectTopicDao());
@@ -272,8 +459,8 @@ public class TopicControllerServiceTest {
     when(manageDatabase.getKafkaEnvList(anyInt())).thenReturn(utilMethods.getEnvLists());
     when(handleDbRequests.getCreatedTopicRequests(anyString(), anyString(), anyBoolean(), anyInt()))
         .thenReturn(listTopicReqs);
-    when(manageDatabase.getTeamsAndAllowedEnvs(anyInt(), anyInt()))
-        .thenReturn(Collections.singletonList("1"));
+    when(commonUtilsService.getEnvsFromUserId(anyString()))
+        .thenReturn(new HashSet<>(Collections.singletonList("1")));
     when(commonUtilsService.deriveCurrentPage(anyString(), anyString(), anyInt())).thenReturn("1");
     when(manageDatabase.getTeamNameFromTeamId(anyInt(), anyInt())).thenReturn("INFTATEAM");
 
@@ -284,7 +471,7 @@ public class TopicControllerServiceTest {
   }
 
   @Test
-  @Order(11)
+  @Order(14)
   public void getCreatedTopicRequests2() {
     List<TopicRequest> listTopicReqs = new ArrayList<>();
     listTopicReqs.add(getTopicRequest("topic1"));
@@ -297,8 +484,8 @@ public class TopicControllerServiceTest {
     when(manageDatabase.getKafkaEnvList(anyInt())).thenReturn(utilMethods.getEnvLists());
     when(handleDbRequests.getCreatedTopicRequests(anyString(), anyString(), anyBoolean(), anyInt()))
         .thenReturn(listTopicReqs);
-    when(manageDatabase.getTeamsAndAllowedEnvs(anyInt(), anyInt()))
-        .thenReturn(Collections.singletonList("1"));
+    when(commonUtilsService.getEnvsFromUserId(anyString()))
+        .thenReturn(new HashSet<>(Collections.singletonList("1")));
     when(commonUtilsService.deriveCurrentPage(anyString(), anyString(), anyInt())).thenReturn("1");
     when(manageDatabase.getTeamNameFromTeamId(anyInt(), anyInt())).thenReturn("INFTATEAM");
 
@@ -312,7 +499,7 @@ public class TopicControllerServiceTest {
   }
 
   @Test
-  @Order(12)
+  @Order(15)
   public void deleteTopicRequests() throws KlawException {
     when(handleDbRequests.deleteTopicRequest(anyInt(), anyInt()))
         .thenReturn(ApiResultStatus.SUCCESS.value);
@@ -322,8 +509,8 @@ public class TopicControllerServiceTest {
   }
 
   @Test
-  @Order(13)
-  public void approveTopicRequestsSuccess() throws KlawException {
+  @Order(16)
+  public void approveTopicRequestsSuccess1() throws KlawException {
     String topicName = "topic1";
     int topicId = 1001;
     TopicRequest topicRequest = getTopicRequest(topicName);
@@ -336,16 +523,74 @@ public class TopicControllerServiceTest {
     when(clusterApiService.approveTopicRequests(
             anyString(), anyString(), anyInt(), anyString(), anyString(), any(), anyInt()))
         .thenReturn(new ResponseEntity<>(apiResponse, HttpStatus.OK));
-    when(manageDatabase.getTeamsAndAllowedEnvs(anyInt(), anyInt()))
-        .thenReturn(Collections.singletonList("1"));
+    when(commonUtilsService.getEnvsFromUserId(anyString()))
+        .thenReturn(new HashSet<>(Collections.singletonList("1")));
 
     ApiResponse apiResponse1 = topicControllerService.approveTopicRequests(topicId + "");
-
     assertThat(apiResponse1.getResult()).isEqualTo(ApiResultStatus.SUCCESS.value);
   }
 
   @Test
-  @Order(14)
+  @Order(16)
+  public void approveTopicClaimRequestsSuccess2() throws KlawException {
+    String topicName = "topic1";
+    int topicId = 1001;
+    TopicRequest topicRequest = getTopicRequest(topicName);
+    topicRequest.setTopictype(TopicRequestTypes.Claim.name());
+    ApiResponse apiResponse = ApiResponse.builder().result(ApiResultStatus.SUCCESS.value).build();
+
+    stubUserInfo();
+    when(handleDbRequests.selectTopicRequestsForTopic(anyInt(), anyInt())).thenReturn(topicRequest);
+    when(handleDbRequests.updateTopicRequest(any(), anyString()))
+        .thenReturn(ApiResultStatus.SUCCESS.value);
+    when(handleDbRequests.getTopicTeam(anyString(), anyInt()))
+        .thenReturn(List.of(getTopic(topicName)));
+    when(clusterApiService.approveTopicRequests(
+            anyString(), anyString(), anyInt(), anyString(), anyString(), any(), anyInt()))
+        .thenReturn(new ResponseEntity<>(apiResponse, HttpStatus.OK));
+    when(commonUtilsService.getEnvsFromUserId(anyString()))
+        .thenReturn(new HashSet<>(Collections.singletonList("1")));
+    when(commonUtilsService.getFilteredTopicsForTenant(any()))
+        .thenReturn(List.of(getTopic(topicName)));
+    when(handleDbRequests.addToSynctopics(any())).thenReturn(ApiResultStatus.SUCCESS.value);
+    when(handleDbRequests.updateTopicRequestStatus(any(), anyString()))
+        .thenReturn(ApiResultStatus.SUCCESS.value);
+
+    ApiResponse apiResponse1 = topicControllerService.approveTopicRequests(topicId + "");
+    assertThat(apiResponse1.getResult()).isEqualTo(ApiResultStatus.SUCCESS.value);
+  }
+
+  @Test
+  @Order(16)
+  public void approveTopicUpdateRequestsSuccess3() throws KlawException {
+    String topicName = "topic1";
+    int topicId = 1001;
+    TopicRequest topicRequest = getTopicRequest(topicName);
+    topicRequest.setTopictype(TopicRequestTypes.Update.name());
+    ApiResponse apiResponse = ApiResponse.builder().result(ApiResultStatus.SUCCESS.value).build();
+
+    stubUserInfo();
+    when(handleDbRequests.selectTopicRequestsForTopic(anyInt(), anyInt())).thenReturn(topicRequest);
+    when(handleDbRequests.updateTopicRequest(any(), anyString()))
+        .thenReturn(ApiResultStatus.SUCCESS.value);
+    when(handleDbRequests.getTopicTeam(anyString(), anyInt()))
+        .thenReturn(List.of(getTopic(topicName)));
+    when(clusterApiService.approveTopicRequests(
+            anyString(), anyString(), anyInt(), anyString(), anyString(), any(), anyInt()))
+        .thenReturn(new ResponseEntity<>(apiResponse, HttpStatus.OK));
+    when(commonUtilsService.getEnvsFromUserId(anyString()))
+        .thenReturn(new HashSet<>(Collections.singletonList("1")));
+    when(commonUtilsService.getFilteredTopicsForTenant(any()))
+        .thenReturn(List.of(getTopic(topicName)));
+    when(manageDatabase.getTeamNameFromTeamId(anyInt(), anyInt())).thenReturn("INFRATEAM");
+    when(manageDatabase.getKafkaEnvList(anyInt())).thenReturn(utilMethods.getEnvLists());
+
+    ApiResponse apiResponse1 = topicControllerService.approveTopicRequests(topicId + "");
+    assertThat(apiResponse1.getResult()).isEqualTo(ApiResultStatus.SUCCESS.value);
+  }
+
+  @Test
+  @Order(17)
   public void approveTopicRequestsFailure1() throws KlawException {
     String topicName = "topic1";
     int topicId = 1001;
@@ -359,20 +604,35 @@ public class TopicControllerServiceTest {
     when(clusterApiService.approveTopicRequests(
             anyString(), anyString(), anyInt(), anyString(), anyString(), any(), anyInt()))
         .thenReturn(new ResponseEntity<>(apiResponse, HttpStatus.OK));
-    when(manageDatabase.getTeamsAndAllowedEnvs(anyInt(), anyInt()))
-        .thenReturn(Collections.singletonList("1"));
+    when(commonUtilsService.getEnvsFromUserId(anyString()))
+        .thenReturn(new HashSet<>(Collections.singletonList("1")));
 
     ApiResponse apiResponse1 = topicControllerService.approveTopicRequests("" + topicId);
-
-    assertThat(apiResponse.getResult()).isEqualTo("failure");
+    assertThat(apiResponse1.getResult()).isEqualTo("failure");
   }
 
   @Test
-  @Order(15)
+  @Order(17)
+  public void approveTopicRequestsFailure2() throws KlawException {
+    String topicName = "topic1";
+    int topicId = 1001;
+    TopicRequest topicRequest = getTopicRequest(topicName);
+    topicRequest.setRequestor("kwusera");
+
+    stubUserInfo();
+    when(handleDbRequests.selectTopicRequestsForTopic(anyInt(), anyInt())).thenReturn(topicRequest);
+
+    ApiResponse apiResponse1 = topicControllerService.approveTopicRequests("" + topicId);
+    assertThat(apiResponse1.getResult())
+        .isEqualTo("You are not allowed to approve your own topic requests.");
+  }
+
+  @Test
+  @Order(18)
   public void getAllTopics() {
     stubUserInfo();
-    when(manageDatabase.getTeamsAndAllowedEnvs(anyInt(), anyInt()))
-        .thenReturn(Collections.singletonList("1"));
+
+    when(commonUtilsService.getFilteredTopicsForTenant(any())).thenReturn(utilMethods.getTopics());
     when(handleDbRequests.getSyncTopics(any(), any(), anyInt()))
         .thenReturn(utilMethods.getTopics());
 
@@ -382,13 +642,13 @@ public class TopicControllerServiceTest {
   }
 
   @Test
-  @Order(16)
+  @Order(19)
   public void getTopicsSuccess1() throws Exception {
     String envSel = "1", pageNo = "1", topicNameSearch = "top";
 
     stubUserInfo();
-    when(manageDatabase.getTeamsAndAllowedEnvs(anyInt(), anyInt()))
-        .thenReturn(Collections.singletonList("1"));
+    when(commonUtilsService.getEnvsFromUserId(anyString()))
+        .thenReturn(new HashSet<>(Collections.singletonList("1")));
     when(commonUtilsService.deriveCurrentPage(anyString(), anyString(), anyInt())).thenReturn("1");
     when(handleDbRequests.getSyncTopics(any(), any(), anyInt()))
         .thenReturn(getSyncTopics("topic", 4));
@@ -396,6 +656,7 @@ public class TopicControllerServiceTest {
     when(manageDatabase.getTeamNameFromTeamId(anyInt(), anyInt()))
         .thenReturn("INFRATEAM", "INFRATEAM", "INFRATEAM", "INFRATEAM");
     when(mailService.getEnvProperty(anyInt(), anyString())).thenReturn("1");
+    when(commonUtilsService.groupTopicsByEnv(any())).thenReturn(getSyncTopics("topic", 4));
 
     List<List<TopicInfo>> topicsList =
         topicControllerService.getTopics(envSel, pageNo, "", topicNameSearch, null, null);
@@ -405,10 +666,9 @@ public class TopicControllerServiceTest {
 
   // topicSearch does not exist in topic names
   @Test
-  @Order(18)
+  @Order(20)
   public void getTopicsSearchFailure() throws Exception {
     String envSel = "1", pageNo = "1", topicNameSearch = "demo";
-
     stubUserInfo();
     when(manageDatabase.getTeamsAndAllowedEnvs(anyInt(), anyInt()))
         .thenReturn(Collections.singletonList("1"));
@@ -422,34 +682,7 @@ public class TopicControllerServiceTest {
   }
 
   @Test
-  @Order(19)
-  public void getSyncTopics() throws Exception {
-    String envSel = "1", pageNo = "1", topicNameSearch = "top";
-
-    stubUserInfo();
-    when(manageDatabase.getKafkaEnvList(anyInt())).thenReturn(utilMethods.getEnvLists());
-    when(clusterApiService.getAllTopics(
-            anyString(), any(KafkaSupportedProtocol.class), anyString(), anyInt()))
-        .thenReturn(utilMethods.getClusterApiTopics("topic", 10));
-    when(handleDbRequests.selectAllTeamsOfUsers(anyString(), anyInt()))
-        .thenReturn(getAvailableTeams());
-    when(manageDatabase.getClusters(any(KafkaClustersType.class), anyInt()))
-        .thenReturn(clustersHashMap);
-    when(clustersHashMap.get(any())).thenReturn(kwClusters);
-    when(kwClusters.getBootstrapServers()).thenReturn("clusters");
-    when(kwClusters.getProtocol()).thenReturn(KafkaSupportedProtocol.PLAINTEXT);
-    when(kwClusters.getClusterName()).thenReturn("cluster");
-    when(rolesPermissionsControllerService.getApproverRoles(anyString(), anyInt()))
-        .thenReturn(List.of("USER"));
-
-    Map<String, Object> topicRequests =
-        topicSyncControllerService.getSyncTopics(
-            envSel, pageNo, "", topicNameSearch, "false", false);
-    assertThat(topicRequests).hasSize(2);
-  }
-
-  @Test
-  @Order(20)
+  @Order(21)
   public void declineTopicRequests() throws KlawException {
     String topicName = "testtopic";
     int topicId = 1001;
@@ -458,8 +691,8 @@ public class TopicControllerServiceTest {
     stubUserInfo();
     when(handleDbRequests.selectTopicRequestsForTopic(anyInt(), anyInt())).thenReturn(topicRequest);
     when(commonUtilsService.isNotAuthorizedUser(any(), any())).thenReturn(false);
-    when(manageDatabase.getTeamsAndAllowedEnvs(anyInt(), anyInt()))
-        .thenReturn(Collections.singletonList("1"));
+    when(commonUtilsService.getEnvsFromUserId(anyString()))
+        .thenReturn(new HashSet<>(Collections.singletonList("1")));
     when(handleDbRequests.declineTopicRequest(any(), anyString()))
         .thenReturn(ApiResultStatus.SUCCESS.value);
     ApiResponse resultResp = topicControllerService.declineTopicRequests(topicId + "", "Reason");
@@ -468,38 +701,20 @@ public class TopicControllerServiceTest {
   }
 
   @Test
-  @Order(21)
-  public void getTopicRequests() {
-
-    stubUserInfo();
-    when(manageDatabase.getKafkaEnvList(anyInt())).thenReturn(utilMethods.getEnvLists());
-    when(manageDatabase.getTeamsAndAllowedEnvs(anyInt(), anyInt()))
-        .thenReturn(Collections.singletonList("1"));
-    when(handleDbRequests.getAllTopicRequests(anyString(), anyInt()))
-        .thenReturn(getListTopicRequests());
-    when(commonUtilsService.deriveCurrentPage(anyString(), anyString(), anyInt())).thenReturn("1");
-    when(manageDatabase.getTeamNameFromTeamId(anyInt(), anyInt())).thenReturn("INFRATEAM");
-
-    List<TopicRequestModel> listTopicRqs = topicControllerService.getTopicRequests("1", "", "all");
-    assertThat(listTopicRqs).hasSize(2);
-  }
-
-  @Test
-  @Order(22)
+  @Order(23)
   public void getTopicTeam() {
     String topicName = "testtopic";
     stubUserInfo();
     when(handleDbRequests.getTopicTeam(anyString(), anyInt()))
         .thenReturn(List.of(getTopic(topicName)));
-    when(manageDatabase.getTeamsAndAllowedEnvs(anyInt(), anyInt()))
-        .thenReturn(Collections.singletonList("1"));
+    when(commonUtilsService.getFilteredTopicsForTenant(any()))
+        .thenReturn(List.of(getTopic(topicName)));
 
     List<Topic> topicTeam = topicControllerService.getTopicFromName(topicName, 1);
     assertThat(topicTeam.get(0).getTeamId()).isOne();
   }
 
   private TopicRequestModel getCorrectTopic() {
-
     TopicRequestModel topicRequest = new TopicRequestModel();
     topicRequest.setTopicname("newtopicname");
     topicRequest.setEnvironment(env.getId());
@@ -511,7 +726,6 @@ public class TopicControllerServiceTest {
   }
 
   private TopicRequestModel getFailureTopic() {
-
     TopicRequestModel topicRequest = new TopicRequestModel();
     topicRequest.setTopicname("newtopicname");
     topicRequest.setEnvironment(env.getId());
@@ -522,7 +736,6 @@ public class TopicControllerServiceTest {
   }
 
   private TopicRequest getCorrectTopicDao() {
-
     TopicRequest topicRequest = new TopicRequest();
     topicRequest.setEnvironment(env.getId());
     topicRequest.setTopicpartitions(2);
@@ -532,17 +745,7 @@ public class TopicControllerServiceTest {
     return topicRequest;
   }
 
-  private TopicRequest getFailureTopicDao() {
-
-    TopicRequest topicRequest = new TopicRequest();
-    topicRequest.setEnvironment(env.getId());
-    topicRequest.setTopicpartitions(3);
-    topicRequest.setRequesttime(new Timestamp(System.currentTimeMillis()));
-    return topicRequest;
-  }
-
   private TopicRequestModel getFailureTopic1() {
-
     TopicRequestModel topicRequest = new TopicRequestModel();
     topicRequest.setTopicname("newtopicname");
     topicRequest.setEnvironment(env.getId());
@@ -553,7 +756,6 @@ public class TopicControllerServiceTest {
   }
 
   private TopicRequest getTopicRequest(String name) {
-
     TopicRequest topicRequest = new TopicRequest();
     topicRequest.setTopicname(name);
     topicRequest.setEnvironment(env.getId());
@@ -563,12 +765,14 @@ public class TopicControllerServiceTest {
     topicRequest.setTeamId(101);
     topicRequest.setTopicstatus("created");
     topicRequest.setRequestor("kwuserb");
+    topicRequest.setJsonParams(
+        "{\"advancedTopicConfiguration\":{\"compression.type\":\"snappy\",\"cleanup.policy\":\"compact\"}}");
     topicRequest.setTopictype(RequestOperationType.CREATE.value);
+    topicRequest.setTenantId(101);
     return topicRequest;
   }
 
   private List<TopicRequest> getListTopicRequests() {
-
     TopicRequest topicRequest = new TopicRequest();
     topicRequest.setTopicname("testtopic1");
     topicRequest.setEnvironment(env.getId());
@@ -587,29 +791,12 @@ public class TopicControllerServiceTest {
     topicRequest1.setTeamId(101);
     topicRequest1.setTopicstatus("created");
     topicRequest1.setRequesttime(new Timestamp(System.currentTimeMillis()));
+    topicRequest1.setJsonParams(
+        "{\"advancedTopicConfiguration\":{\"compression.type\":\"snappy\",\"cleanup.policy\":\"compact\"}}");
 
     listReqs.add(topicRequest1);
 
     return listReqs;
-  }
-
-  private List<Team> getAvailableTeams() {
-
-    Team team1 = new Team();
-    team1.setTeamname("Team1");
-
-    Team team2 = new Team();
-    team2.setTeamname("Team2");
-
-    Team team3 = new Team();
-    team3.setTeamname("Team3");
-
-    List<Team> teamList = new ArrayList<>();
-    teamList.add(team1);
-    teamList.add(team2);
-    teamList.add(team3);
-
-    return teamList;
   }
 
   private Topic getTopic(String topicName) {
@@ -619,6 +806,10 @@ public class TopicControllerServiceTest {
     t.setTopicid(1);
     t.setTenantId(0);
     t.setEnvironment("1");
+    t.setHistory(
+        "[{\"environmentName\":\"DEV\",\"teamName\":\"Team\",\"requestedBy\":\"user\","
+            + "\"requestedTime\":\"2022-Sep-23 13:38:22\",\"approvedBy\":\"user\","
+            + "\"approvedTime\":\"2022-Sep-23 13:38:52\",\"remarks\":\"Create\"}]");
 
     return t;
   }
@@ -637,6 +828,7 @@ public class TopicControllerServiceTest {
       t.setTopicid(i);
       t.setEnvironment("1");
       t.setTeamId(101);
+      t.setEnvironmentsList(new ArrayList<>());
 
       listTopics.add(t);
     }
